2005-11-27  Guilhem Lavaux  <guilhem@kaffe.org>

	* developers/math_symbols: Added more symbols to be renamed
	(needed for darwin5).

	* libraries/clib/fdlibm/namespace.h: Regenerated.
	
2005-11-26  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-pthreads/syscalls.c
	(jthreadedRecvFrom): Fixed infinite loop.

2005-11-26  Guilhem Lavaux  <guilhem@kaffe.org>

	* Resynchronized GNU Classpath to 2005-11-26.

	* developers/resync-classpath.sh: Partially automated the update of the
	repository. Files are not added nor removed from the CVS though. It is
	possible using the files add_files & remove_files.

	*
	libraries/javalib/vmspecific/javax/sound/sampled/AudioFileFormat.java,
	libraries/javalib/vmspecific/javax/sound/sampled/AudioFormat.java,
	libraries/javalib/vmspecific/javax/sound/sampled/AudioInputStream.java,
	libraries/javalib/vmspecific/javax/sound/sampled/AudioPermission.java,
	libraries/javalib/vmspecific/javax/sound/sampled/AudioSystem.java,
	libraries/javalib/vmspecific/javax/sound/sampled/BooleanControl.java,
	libraries/javalib/vmspecific/javax/sound/sampled/Clip.java,
	libraries/javalib/vmspecific/javax/sound/sampled/CompoundControl.java,
	libraries/javalib/vmspecific/javax/sound/sampled/Control.java,
	libraries/javalib/vmspecific/javax/sound/sampled/DataLine.java,
	libraries/javalib/vmspecific/javax/sound/sampled/EnumControl.java,
	libraries/javalib/vmspecific/javax/sound/sampled/FloatControl.java,
	libraries/javalib/vmspecific/javax/sound/sampled/Line.java,
	libraries/javalib/vmspecific/javax/sound/sampled/LineEvent.java,
	libraries/javalib/vmspecific/javax/sound/sampled/LineListener.java,
	libraries/javalib/vmspecific/javax/sound/sampled/LineUnavailableException.java,
	libraries/javalib/vmspecific/javax/sound/sampled/Mixer.java,
	libraries/javalib/vmspecific/javax/sound/sampled/Port.java,
	libraries/javalib/vmspecific/javax/sound/sampled/ReverbType.java,
	libraries/javalib/vmspecific/javax/sound/sampled/SourceDataLine.java,